feat(textfield): add multiline and password support
Add support for password mask & configuring textfield for multiline using `<textarea>`.

Closes #227.

--- a/src/components/textfield/demo/index.html
+++ b/src/components/textfield/demo/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-  <h1 class="ms-font-su">Textfield Demo | &lt;uif-textfield&gt;</h1> 
+  <h1 class="ms-font-su">Textfield Demo | &lt;uif-textfield&gt;</h1>
   <em>In order for this demo to work you must first build the library in debug mode.</em>
 
   <h2>Basic usage</h2>
@@ -31,7 +31,7 @@
   <p>
     Renders this:
     <br />
-    <uif-textfield uif-label="This is the label" ng-model="textValue" uif-description="This is the description" />  
+    <uif-textfield uif-label="This is the label" ng-model="textValue" uif-description="This is the description" />
   </p>
   <p>
     <span>textValue: {{textValue}}</span>
@@ -50,7 +50,20 @@
     <br />
     <uif-textfield uif-label="This is the label" uif-underlined />
   </p>
-  
+
+  <h2>Basic multiline usage</h2>
+  <p>
+    This markup: <br />
+    <code>
+      &lt;uif-textfield uif-label=&quot;This is the label&quot; uif-description=&quot;This is the description&quot; uif-multiline=&quot;true&quot; /&gt;
+    </code>
+  </p>
+  <p>
+    Renders this:
+    <br />
+    <uif-textfield uif-label="This is the label" uif-description="This is the description" uif-multiline="true" />
+  </p>
+
   <h2>Required</h2>
   <p>
     This markup: <br />
@@ -64,7 +77,7 @@
     <br />
     <uif-textfield uif-label="This is the label" required />
   </p>
-  
+
   <h2>ng-Disabled</h2>
   <p>
     This markup: <br />
@@ -77,12 +90,12 @@
     Renders this:
     <br />
     <uif-textfield uif-label="This is the label" ng-disabled="disabled" />
-    
+
   </p>
   <p>
     <input type="checkbox" ng-model="disabled" />Disabled
     </p>
-  
+
   <h2>Disabled</h2>
   <p>
     This markup: <br />
@@ -96,7 +109,7 @@
     <br />
     <uif-textfield uif-label="This is the label" disabled />
   </p>
-  
+
   <h2>Placeholder</h2>
    <p>
     This markup: <br />
@@ -108,7 +121,21 @@
   <p>
     Renders this:
     <br />
-    <uif-textfield placeholder="This is the placeholder" />  
+    <uif-textfield placeholder="This is the placeholder" />
+  </p>
+
+  <h2>Password</h2>
+  <p>
+    This markup: <br />
+    <code>
+      &lt;uif-textfield uif-label=&quot;This is the label&quot; uif-type=&quot;password&quot; /&gt;
+    </code>
+  </p>
+
+  <p>
+    Renders this:
+    <br />
+    <uif-textfield uif-label="This is the label" uif-type="password" />
   </p>
 </body>
 
