feat(textfield): multiline and password
takeover from #227 and PR #232

--- a/src/components/textfield/demo/index.html
+++ b/src/components/textfield/demo/index.html
@@ -110,6 +110,20 @@
     <br />
     <uif-textfield placeholder="This is the placeholder" />  
   </p>
+  
+  <h2>Password</h2>
+  <p>
+    This markup: <br />
+    <code>
+      &lt;uif-textfield uif-label=&quot;This is the label&quot;  /&gt;
+    </code>
+  </p>
+
+  <p>
+    Renders this:
+    <br />
+    <uif-textfield uif-label="This is the label" uif-type="password" />
+  </p>
 </body>
 
 </html>
