refactor(table): changed rendering to use table markup
Office UI Fabric pre 2.3.0 used `div` and `span` to render the table. In 2.3.0 they changed their implementation to use HTML table elements for better accessibility. This change switches our implementation from `div` and `span` to HTML table elements.

Closes #294.

--- a/src/components/table/demoBasicUsage/index.html
+++ b/src/components/table/demoBasicUsage/index.html
@@ -1,16 +1,20 @@
 <uif-table>
-    <uif-table-row>
-        <uif-table-row-select></uif-table-row-select>
-        <uif-table-header>File name</uif-table-header>
-        <uif-table-header>Location</uif-table-header>
-        <uif-table-header>Modified</uif-table-header>
-        <uif-table-header>Type</uif-table-header>
-    </uif-table-row>
-    <uif-table-row ng-repeat="f in files" uif-selected="{{f.isSelected}}">
-        <uif-table-row-select></uif-table-row-select>
-        <uif-table-cell>{{f.fileName}}</uif-table-cell>
-        <uif-table-cell>{{f.location}}</uif-table-cell>
-        <uif-table-cell>{{f.modified | date}}</uif-table-cell>
-        <uif-table-cell>{{f.type}}</uif-table-cell>
-    </uif-table-row>
+    <uif-table-head>
+        <uif-table-row>
+            <uif-table-row-select></uif-table-row-select>
+            <uif-table-header>File name</uif-table-header>
+            <uif-table-header>Location</uif-table-header>
+            <uif-table-header>Modified</uif-table-header>
+            <uif-table-header>Type</uif-table-header>
+        </uif-table-row>
+    </uif-table-head>
+    <uif-table-body>
+        <uif-table-row ng-repeat="f in files" uif-selected="{{f.isSelected}}">
+            <uif-table-row-select></uif-table-row-select>
+            <uif-table-cell>{{f.fileName}}</uif-table-cell>
+            <uif-table-cell>{{f.location}}</uif-table-cell>
+            <uif-table-cell>{{f.modified | date}}</uif-table-cell>
+            <uif-table-cell>{{f.type}}</uif-table-cell>
+        </uif-table-row>
+    </uif-table-body>
 </uif-table>
