uif-textfield: Demo Multiline & type='password' test
Fixed the demo multiline
Added tests for type="password"

Fixes #300. Closes #301.

--- a/src/components/textfield/demoMultiline/index.html
+++ b/src/components/textfield/demoMultiline/index.html
@@ -12,6 +12,7 @@
   <script src="../../../../node_modules/angular/angular.min.js"></script>
   <!-- ngofficeuifabric library -->
   <script src="../../../../dist/ngOfficeUiFabric.js"></script>
+  <script src="index.js"></script>
 </head>
 
 <body>
