Demo: change in wording Directive: added two usage examples Specs: changed button to link in test

--- a/src/components/button/demoDisabled/index.html
+++ b/src/components/button/demoDisabled/index.html
@@ -20,10 +20,11 @@
     <h1 class="ms-font-su">Button Demo | &lt;uif-button&gt;</h1>
     <em>In order for this demo to work you must first build the library in debug mode.</em>
 
-    <p>The button can be disabled</p>
+    <p>The buttons can be disabled by checking this checkbox</p>
     <p>
         <input type="checkbox" ng-model="disabled" />Disabled
     </p>
+    
     <h2>Button rendering</h2>
     <p>
         This markup:<br />
@@ -36,7 +37,8 @@
         Renders this:<br />
         <uif-button ng-disabled="disabled">Lorem Ipsum</uif-button>
     </p>
-    <h2>a Link Rendering</h2>
+    
+    <h2>Link Rendering</h2>
     <p>
         This markup:<br />
         <code>
