fix(textfield): clear placeholder on click
Added click function for label and basic test

fix for multiline with placeholder
- added test
- added multiline case
- added demo

Closes #305.

--- a/src/components/textfield/demoMultiline/index.html
+++ b/src/components/textfield/demoMultiline/index.html
@@ -33,6 +33,19 @@
     <uif-textfield uif-label="This is the label" uif-description="This is the description" uif-Multiline="true" />
   </p>
 
+<h2>Basic multiline usage with placeholder</h2>
+  <p>
+    This markup: <br />
+    <code>
+      &lt;uif-textfield uif-label=&quot;This is the label&quot; uif-description=&quot;This is the description&quot; uif-multiline=&quot;true&quot; /&gt;
+    </code>
+  </p>
+  <p>
+    Renders this:
+    <br />
+    <uif-textfield placeholder="This is the placeholder" uif-description="This is the description" uif-Multiline="true" />
+  </p>
+
   <h2>Disabled</h2>
   <p>
     This markup: <br />
