--- a/src/components/table/demo/index.html
+++ b/src/components/table/demo/index.html
@@ -327,6 +327,61 @@
         </uif-table-head>
     </uif-table>
   </p>
+  
+  <h2>Fixed table rendering</h2>
+  <p>
+    This markup: <br />
+    <pre>
+&lt;uif-table uif-table-type=&quot;fixed&quot;&gt;
+    &lt;uif-table-head&gt;
+        &lt;uif-table-row&gt;
+            &lt;uif-table-row-select&gt;&lt;/uif-table-row-select&gt;
+            &lt;uif-table-header uif-order-by="fileName"&gt;File name&lt;/uif-table-header&gt;
+            &lt;uif-table-header&gt;Location&lt;/uif-table-header&gt;
+            &lt;uif-table-header uif-order-by="modified"&gt;Modified&lt;/uif-table-header&gt;
+            &lt;uif-table-header uif-order-by="type"&gt;Type&lt;/uif-table-header&gt;
+            &lt;uif-table-header uif-order-by="size"&gt;Size&lt;/uif-table-header&gt;
+        &lt;/uif-table-row&gt;
+    &lt;/uif-table-head&gt;
+    &lt;uif-table-body&gt;
+        &lt;uif-table-row ng-repeat="f in files | orderBy:table.orderBy:!table.orderAsc" uif-item="f" uif-selected="{{f.isSelected}<!---->}"&gt;
+            &lt;uif-table-row-select&gt;&lt;/uif-table-row-select&gt;
+            &lt;uif-table-cell&gt;{{f.fileName}}&lt;/uif-table-cell&gt;
+            &lt;uif-table-cell&gt;{{f.location}}&lt;/uif-table-cell&gt;
+            &lt;uif-table-cell&gt;{{f.modified | date}}&lt;/uif-table-cell&gt;
+            &lt;uif-table-cell&gt;{{f.type}}&lt;/uif-table-cell&gt;
+            &lt;uif-table-cell&gt;{{f.size}}&lt;/uif-table-cell&gt;
+        &lt;/uif-table-row&gt;
+    &lt;/uif-table-body&gt;
+&lt;/uif-table&gt;
+    </pre>
+  </p>
+  <p ng-controller="demoController">
+    Renders this (selecting multiple rows enabled, one row marked as selected):
+    <br />
+    <uif-table uif-table-type="fixed">
+        <uif-table-head>
+            <uif-table-row>
+                <uif-table-row-select></uif-table-row-select>
+                <uif-table-header uif-order-by="fileName">File name</uif-table-header>
+                <uif-table-header>Location</uif-table-header>
+                <uif-table-header uif-order-by="modified">Modified</uif-table-header>
+                <uif-table-header uif-order-by="type">Type</uif-table-header>
+                <uif-table-header uif-order-by="size">Size</uif-table-header>
+            </uif-table-row>
+        </uif-table-head>
+        <uif-table-body>
+            <uif-table-row ng-repeat="f in files | orderBy:table.orderBy:!table.orderAsc" uif-item="f" uif-selected="{{f.isSelected}}">
+                <uif-table-row-select></uif-table-row-select>
+                <uif-table-cell>{{f.fileName}}</uif-table-cell>
+                <uif-table-cell>{{f.location}}</uif-table-cell>
+                <uif-table-cell>{{f.modified | date}}</uif-table-cell>
+                <uif-table-cell>{{f.type}}</uif-table-cell>
+                <uif-table-cell>{{f.size}}</uif-table-cell>
+            </uif-table-row>
+        </uif-table-head>
+    </uif-table>
+  </p>
 </body>
 
 </html>
