--- a/src/components/messagebanner/demo/index.html
+++ b/src/components/messagebanner/demo/index.html
@@ -18,25 +18,20 @@
 <body ng-app="demoApp" ng-controller="messageBannerDemoController">
     <h1 class="ms-font-su">Message Banner Demo | &lt;uif-message-banner&gt;</h1>
     <em>In order for this demo to work you must first build the library in debug mode.</em>
-
-    <input type="checkbox" ng-model="bannerToggle" />Show/hide
+    <h3>Basic usage</h3>
+    <input type="checkbox" ng-model="vm.bannerToggle" />Show/hide
     <!-- first example -->
     <p>To render message banner, use the following markup:
         <br />
         <code>
-            &lt;uif-message-banner uif-is-open=&quot;true&quot; uif-message=&quot;Testmessage&quot; uif-action-label=&quot;Testbutton&quot; uif-action=&quot;alert('test')&quot; /&gt;
+            &lt;uif-message-banner uif-is-visible=&quot;vm.bannerToggle&quot; uif-message=&quot;{{vm.message}}&quot; uif-action-label=&quot;Testbutton&quot; uif-action=&quot;customFunction()&quot;
+            uif-on-close=&quot;customCloseFunction()&quot; /&gt;
         </code>
     </p>
 
     <p>
-        <uif-message-banner uif-is-open="bannerToggle" uif-message="Testmessage" uif-action-label="Testbutton" uif-action="customFunction()"
+        <uif-message-banner uif-is-visible="vm.bannerToggle" uif-message="{{vm.message}}" uif-action-label="Testbutton" uif-action="customFunction()"
             uif-on-close="customCloseFunction()" />
-    </p>
-    <h2>uif-content demo</h2>
-    <p>
-        <uif-message-banner uif-is-open="bannerToggle" uif-action-label="Testbutton" uif-action="myFunction()" uif-on-close="customCloseFunction()">
-            <uif-content><b>Some formatted content</b></uif-content>
-        </uif-message-banner>
     </p>
 </body>
 
