Adds: - tests for uif-message-banner
Removes:
- uif-message

References #299.

--- a/src/components/messagebanner/demoContent/index.html
+++ b/src/components/messagebanner/demoContent/index.html
@@ -35,7 +35,7 @@
         </code>
     </p>
     <p>
-        <uif-message-banner uif-is-visible="vm.bannerToggle" uif-action-label="Testbutton" uif-action="customFunction()" uif-on-close="customCloseFunction()">
+        <uif-message-banner uif-is-visible="vm.bannerToggle" uif-action-label="{{vm.label}}" uif-action="customFunction()" uif-on-close="customCloseFunction()">
             <uif-content>
                 <b>Some formatted content</b> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
                 tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo
