fix(breadcrumb): breadcrumb with ng-repeat
Changes the transclude function of the breadcrumb to work with
ng-repeat.

Closes #330.

--- a/src/components/breadcrumb/demo/index.html
+++ b/src/components/breadcrumb/demo/index.html
@@ -1,40 +1,54 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <title>ngOfficeUiFabric | uif-Breadcrumb demo</title>
-    <meta charset="utf-8">
+<head>
+  <title>ngOfficeUiFabric | uif-Breadcrumb demo</title>
+  <meta charset="utf-8">
 
-    <!-- office ui fabric css -->
-    <link rel="stylesheet" href="../../../../node_modules/office-ui-fabric/dist/css/fabric.min.css" />
-    <link rel="stylesheet" href="../../../../node_modules/office-ui-fabric/dist/css/fabric.components.min.css" />
+  <!-- office ui fabric css -->
+  <link rel="stylesheet" href="../../../../node_modules/office-ui-fabric/dist/css/fabric.min.css" />
+  <link rel="stylesheet" href="../../../../node_modules/office-ui-fabric/dist/css/fabric.components.min.css" />
 
-    <!-- angular library -->
-    <script src="../../../../node_modules/angular/angular.js"></script>
-    <!-- ngofficeuifabric library -->
-    <script src="../../../../dist/ngOfficeUiFabric.js"></script>
-    <script src="index.js"></script>
-  </head>
+  <!-- angular library -->
+  <script src="../../../../node_modules/angular/angular.js"></script>
+  <!-- ngofficeuifabric library -->
+  <script src="../../../../dist/ngOfficeUiFabric.js"></script>
+  <script src="index.js"></script>
+</head>
 
-  <body ng-app="demoApp">
-    <h1 class="ms-font-su">Breadcrumb Demo | &lt;uif-breadcrumb&gt;</h1>
-    <em>In order for this demo to work you must first build the library in debug mode.</em>
+<body ng-app="demoApp">
+  <h1 class="ms-font-su">Breadcrumb Demo | &lt;uif-breadcrumb&gt;</h1>
+  <em>In order for this demo to work you must first build the library in debug mode.</em>
 
-    <!-- first example -->
-    <p>To render breadcrumb, use the following markup:
-      <br/>
-      <pre>
+  <!-- first example -->
+  <p>To render breadcrumb, use the following markup:
+    <br/>
+    <pre>
         &lt;uif-breadcrumb&gt;&#13;&#10;          &lt;uif-breadcrumb-link ng-href=&quot;\&apos;http://github1.com\&apos;&quot;&gt;GitHub1&lt;/uif-breadcrumb-link&gt;&#13;&#10;          &lt;uif-breadcrumb-link ng-href=&quot;\&apos;http://github2.com\&apos;&quot;&gt;GitHub2&lt;/uif-breadcrumb-link&gt;&#13;&#10;          &lt;uif-breadcrumb-link ng-href=&quot;\&apos;http://github3.com\&apos;&quot;&gt;GitHub3&lt;/uif-breadcrumb-link&gt;&#13;&#10;          &lt;uif-breadcrumb-link ng-href=&quot;\&apos;http://github4.com\&apos;&quot;&gt;GitHub4&lt;/uif-breadcrumb-link&gt;&#13;&#10;        &lt;/uif-breadcrumb&gt;
       </pre>
-    </p>
+  </p>
 
-    <p>
-      <uif-breadcrumb>
-        <uif-breadcrumb-link ng-href="\'http://github1.com\'">GitHub1</uif-breadcrumb-link>
-        <uif-breadcrumb-link ng-href="\'http://github2.com\'">GitHub2</uif-breadcrumb-link>
-        <uif-breadcrumb-link ng-href="\'http://github3.com\'">GitHub3</uif-breadcrumb-link>
-        <uif-breadcrumb-link ng-href="\'http://github4.com\'">GitHub4</uif-breadcrumb-link>
-      </uif-breadcrumb>
-    </p>
-  </body>
+  <p>
+    <uif-breadcrumb>
+      <uif-breadcrumb-link ng-href="\'http://github1.com\'">GitHub1</uif-breadcrumb-link>
+      <uif-breadcrumb-link ng-href="\'http://github2.com\'">GitHub2</uif-breadcrumb-link>
+      <uif-breadcrumb-link ng-href="\'http://github3.com\'">GitHub3</uif-breadcrumb-link>
+      <uif-breadcrumb-link ng-href="\'http://github4.com\'">GitHub4</uif-breadcrumb-link>
+    </uif-breadcrumb>
+  </p>
+  <h2>ng-repeat</h2>
+  <p>
+    <pre>
+      &lt;uif-breadcrumb&gt;
+      &lt;uif-breadcrumb-link ng-href=&quot;{{item}}&quot; ng-repeat=&quot;item in items&quot;&gt;{{item}}&lt;/uif-breadcrumb-link&gt;
+      &lt;/uif-breadcrumb&gt;
+    </pre>
+  </p>
+  <p ng-controller="demoCtrl">
+    <uif-breadcrumb>
+      <uif-breadcrumb-link ng-href="{{item}}" ng-repeat="item in items">{{item}}</uif-breadcrumb-link>
+    </uif-breadcrumb>
+  </p>
+</body>
+
 </html>
