fix: tabindex gets calculated correctly
tabindex gets calculated in the link funktion of the breadcrumblink
directive. This fixes the NaN issue.

--- a/src/components/breadcrumb/demo/index.html
+++ b/src/components/breadcrumb/demo/index.html
@@ -46,7 +46,7 @@
   </p>
   <p ng-controller="demoCtrl">
     <uif-breadcrumb>
-      <uif-breadcrumb-link ng-href="{{item}}" uif-tabindex="{{$index}}" ng-repeat="item in items">{{item}}</uif-breadcrumb-link>
+      <uif-breadcrumb-link ng-href="{{item}}" ng-repeat="item in items">{{item}}</uif-breadcrumb-link>
     </uif-breadcrumb>
   </p>
 </body>
