--- a/src/components/choicefield/demo/index.html
+++ b/src/components/choicefield/demo/index.html
@@ -17,7 +17,7 @@
 
 <body ng-controller="demoController">
 
-    <h1 class="ms-font-su">Choicefield Demo | &lt;uif-choicefield&gt;</h1> 
+    <h1 class="ms-font-su">Choicefield Demo | &lt;uif-choicefield&gt;</h1>
     <em>In order for this demo to work you must first build the library in debug mode.</em>
 
     <h2>Basic usage</h2>
@@ -43,7 +43,7 @@
     <p>
         <span>selectedValue: {{selectedValue}}</span>
     </p>
-    
+
     <h2>Use ng-change</h2>
     <p>
         This markup: <br />
@@ -67,29 +67,32 @@
         <span>selectedValue2: {{selectedValue2}}</span><br/>
         <span>changed: {{changed}}</span>
     </p>
-  
+
     <h2>Checkbox usage</h2>
     <p>
         This markup: <br />
         <pre>
-            &lt;uif-choicefield-option uif-type=&quot;checkbox&quot; value=&quot;value1&quot; &#13;&#10;                ng-model=&quot;selectedCheckbox&quot; ng-true-value=&quot;&apos;Y&apos;&quot; ng-false-value=&quot;&apos;N&apos;&quot;&gt;Text 1&lt;/uif-choicefield-option&gt;
+            &lt;uif-choicefield-group&gt;
+              &lt;uif-choicefield-option uif-type=&quot;checkbox&quot; value=&quot;value1&quot; &#13;&#10;                ng-model=&quot;selectedCheckbox&quot; ng-true-value=&quot;&apos;Y&apos;&quot; ng-false-value=&quot;&apos;N&apos;&quot;&gt;Text 1&lt;/uif-choicefield-option&gt;
+            &lt;/uif-choicefield-group&gt;
         </pre>
     </p>
 
     <p>
         Renders this:
         <br />
-        
-        <uif-choicefield-option uif-type="checkbox" value="value1" 
+
+        <uif-choicefield-group>
+          <uif-choicefield-option uif-type="checkbox" value="value1"
             ng-model="selectedCheckbox" ng-true-value="'Y'" ng-false-value="'N'">Text 1</uif-choicefield-option>
-       
+        </uif-choicefield-group>
+
     </p>
     <p>
         <span>selectedCheckbox: {{selectedCheckbox}}</span>
-       
     </p>
- 
-  
+
+
     <h2>Disabled usage</h2>
     <p>
         This markup: <br />
@@ -107,18 +110,21 @@
             <uif-choicefield-option uif-type="radio" value="value3">Text 3</uif-choicefield-option>
             <uif-choicefield-option uif-type="radio" value="value4">Text 4</uif-choicefield-option>
         </uif-choicefield-group>
-
     </p>
     <p>
         <span>selectedValue: {{selectedValue}}</span>
     </p>
-    
-    
+
+
     <h2>ng-disabled usage</h2>
     <p>
         This markup: <br />
         <pre>
           &lt;uif-choicefield-group ng-model=&quot;selectedValue&quot; ng-disabled=&quot;disabled&quot; &gt;&#13;&#10;              &lt;uif-choicefield-option uif-type=&quot;radio&quot; value=&quot;value1&quot;&gt;Text 1&lt;/uif-choicefield-option&gt;&#13;&#10;              &lt;uif-choicefield-option uif-type=&quot;radio&quot; value=&quot;value2&quot;&gt;Text 2&lt;/uif-choicefield-option&gt;&#13;&#10;              &lt;uif-choicefield-option uif-type=&quot;radio&quot; value=&quot;value3&quot;&gt;Text 3&lt;/uif-choicefield-option&gt;&#13;&#10;              &lt;uif-choicefield-option uif-type=&quot;radio&quot; value=&quot;value4&quot;&gt;Text 4&lt;/uif-choicefield-option&gt;&#13;&#10;          &lt;/uif-choicefield-group&gt;&#13;&#10;          &lt;hr/&gt;&#13;&#10;          &lt;uif-choicefield-group ng-model=&quot;selectedValue&quot;&gt;&#13;&#10;              &lt;uif-choicefield-option uif-type=&quot;radio&quot; ng-disabled=&quot;!disabled&quot; value=&quot;value1&quot;&gt;Text 1&lt;/uif-choicefield-option&gt;&#13;&#10;              &lt;uif-choicefield-option uif-type=&quot;radio&quot; ng-disabled=&quot;disabled&quot; value=&quot;value2&quot;&gt;Text 2&lt;/uif-choicefield-option&gt;&#13;&#10;              &lt;uif-choicefield-option uif-type=&quot;radio&quot; ng-disabled=&quot;!disabled&quot; value=&quot;value3&quot;&gt;Text 3&lt;/uif-choicefield-option&gt;&#13;&#10;              &lt;uif-choicefield-option uif-type=&quot;radio&quot; ng-disabled=&quot;disabled&quot; value=&quot;value4&quot;&gt;Text 4&lt;/uif-choicefield-option&gt;&#13;&#10;          &lt;/uif-choicefield-group&gt;
+          &lt;hr /&gt;
+          &lt;uif-choicefield-group ng-model=&quot;selectedValue&quot;&gt;
+            &lt;uif-choicefield-option uif-type=&quot;checkbox&quot; ng-model=&quot;disabled&quot; ng-true-value=&quot;true&quot; ng-false-value=&quot;false&quot;&gt;Disabled&lt;/uif-choicefield-option&gt;
+          &lt;/uif-choicefield-group&gt;
         </pre>
     </p>
 
@@ -138,16 +144,16 @@
             <uif-choicefield-option uif-type="radio" ng-disabled="!disabled" value="value3">Text 3</uif-choicefield-option>
             <uif-choicefield-option uif-type="radio" ng-disabled="disabled" value="value4">Text 4</uif-choicefield-option>
         </uif-choicefield-group>
-        
-        <uif-choicefield-option uif-type="checkbox" 
-        ng-model="disabled" ng-true-value="true" ng-false-value="false">Disabled</uif-choicefield-option>
-        
+        <hr />
+        <uif-choicefield-group ng-model="selectedValue">
+          <uif-choicefield-option uif-type="checkbox" ng-model="disabled" ng-true-value="true" ng-false-value="false">Disabled</uif-choicefield-option>
+        </uif-choicefield-group>
     </p>
     <p>
         <span>Disabled: {{disabled}}</span>
         <span>selectedValue: {{selectedValue}}</span>
     </p>
- 
+
 </body>
 
 </html>
