fix(panel): uif-is-open link is not working correctly
Fixes issue where clicked 'open' in quick succession breaks the panel in
certain circumstances

Closes #373

--- a/src/components/panel/demo/index.html
+++ b/src/components/panel/demo/index.html
@@ -39,7 +39,7 @@
     <raw src="'basic.html'"></raw>
 
     <script type="text/ng-template" id="basic.html">
-      <uif-button  ng-click="vm.isOpen1 = !vm.isOpen1">Toggle Menu</uif-button>
+      <uif-button  ng-click="vm.isOpen1 = true">Toggle Menu</uif-button>
         <uif-panel uif-type="small"
                    uif-is-open="vm.isOpen1"
                    uif-show-overlay="true"
